# ImAge

./: .gitignore  README.md  pyproject.toml
local_dependencies/EpiLands/: pyproject.toml
local_dependencies/EpiLands/epilands/: config.py  image_model.py
local_dependencies/EpiLands/epilands/feature_embedding/: __init__.py  _component_analysis.py  _mds.py  _tsne.py  _umap.py
local_dependencies/EpiLands/epilands/feature_preprocessing/: __init__.py  _bin_df.py  _bootstrap_df.py  _calculate_sample_centroids_from_bins.py  _distance_matrix_pdsit.py  _misc.py  _multiotsu.py  _thresholding.py  _zscore_df.py
local_dependencies/EpiLands/epilands/feature_visualization/: _2D_distance_space_scatter.py  __init__.py  _boxplot_scatter.py  _categorical_scatter.py  _catplot_scatter.py  _component_analysis.py  _generic_scatter.py  _heatmap.py  _plotting_utils.py  _threshold_histogram.py  _umap_scatter.py  plotly_graphing.py
local_dependencies/EpiLands/epilands/generic_read_write/: __init__.py  _ezload.py  _ezsave.py  _find_all_files.py  _read_all_h5_outputs.py  _read_dataframe_from_h5_file.py  _save_dataframe_to_csv.py  _save_dataframe_to_h5_file.py  _save_matplotlib_figure.py
local_dependencies/EpiLands/epilands/image_preprocessing/: __init__.py  _calculate_2D_projection.py  _cellselecter.py  _extract_object.py  _fit_illumination_correction.py  _get_object_bbox.py  _glaylconvert.py  _lin3d_interp.py  _object_cookie_cutter.py  _resize_image.py  _segmentation_preprocess_threshold_resize_images.py
local_dependencies/EpiLands/epilands/image_qc/: __init__.py  _check_image_shapes.py  _percent_max.py  _percent_median_2sd.py  _power_spectrum.py  _power_spetrum_loglog_slope.py  _threshold_series.py
local_dependencies/EpiLands/epilands/image_read_write/: __init__.py  _extract_imagelike_file_information.py  _illumination_correction_model.py  _load_group_images.py  _parse_imagelike_filename_metadata.py  _read_images.py  _read_qc_data.py  _read_segmentation_data.py  _read_stardist_data.py  _save_segmentation_data.py
local_dependencies/EpiLands/epilands/image_segmentation/: __init__.py  _segment_images_stardist.py
local_dependencies/EpiLands/epilands/image_visualization/: __init__.py  _generate_cellcount_map.py  _generate_intensity_map.py  _plot_cell_segmentation.py  _plot_flatfield_darkfield.py  _plot_heatmap.py  _plot_image_data_dict.py  _plot_qc_heatmaps.py  _plot_segmentation_mask.py  _show_thresholded_mask.py  _threshold_objects_histogram.py
local_dependencies/EpiLands/epilands/math/: conversions.py  distance.py
local_dependencies/EpiLands/epilands/object_feature_extraction/: __init__.py  _count_pixels_tas.py  (+4 more)
local_dependencies/ImAgePubAutomation/: pyproject.toml
local_dependencies/ImAgePubAutomation/imagepubautomation/: __init__.py  create_script_output_dirs.py  generic_tags.py
local_dependencies/MultiProcessPipelines/: pyproject.toml
local_dependencies/MultiProcessPipelines/multiprocesspipelines/: __init__.py  module.py  tag_factory.py
local_dependencies/MultiProcessTools/: pyproject.toml  requirements.txt  setup.py
local_dependencies/MultiProcessTools/multiprocesstools/: __init__.py
(+58 files in other folders)
