[tool.poetry]
name = "multiprocesstools"
version = "0.1.0"
description = "\"A package providing tools to perform parallel processing on a node cluster with a shared file system\""
authors = ["Martin <martin.alvarez.kuglen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
